2011-07-29  Paul Eggert  <eggert@cs.ucla.edu>

	* tparam.c: Integer and memory overflow fixes.
	(tparam1): Use ptrdiff_t, not int, for sizes.
	Don't update size until alloc done.
	Redo size calculations to avoid overflow.
	Check for size calculation overflow.

	* termcap.c: Integer and memory overflow issues.
	(tgetent): Use ptrdiff_t, not int, to record results of
	subtracting pointers.
	(gobble_line): Check for overflow more carefully.  Don't update size
	until alloc done.

	* term.c: Integer and memory overflow issues.
	(max_frame_lines): Remove; unused.
	(encode_terminal_src_size, encode_terminal_dst_size): Now ptrdiff_t,
	not int.
	(encode_terminal_code, calculate_costs): Check for size
	calculation overflow.
	(encode_terminal_code): Use ptrdiff_t, not int, to record glyph
	table lengths and related sizes.  Don't update size until alloc
	done.  Redo calculations to avoid overflow.
	(calculate_costs): Don't bother calling xmalloc when xrealloc will do.

	* sysdep.c: Integer and memory overflow issues.
	(system_process_attributes): Use ptrdiff_t, not int, for command
	line length.  Do not attempt to address one before the beginning
	of an array, as that's not portable.

	* search.c: Integer and memory overflow fixes.
	(Freplace_match): Check for size calculation overflow.
	(Fset_match_data): Don't assume list lengths fit in 'int'.

	* scroll.c: Integer and memory overflow fixes.
	(do_line_insertion_deletion_costs): Check for size calculation overflow.
	Don't bother calling xmalloc when xrealloc will do.

	* region-cache.c (move_cache_gap): Check for size calculation overflow.

	* process.c (Fnetwork_interface_list): Check for overflow
	in size calculation.

	* nsterm.h (struct ns_color_table.size, struct ns_color_table.avail):
	Now ptrdiff_t, not int.
	* nsterm.m (ns_index_color): Use ptrdiff_t, not int, for table indexes.
	(ns_draw_fringe_bitmap): Rewrite to avoid overflow.

	* minibuf.c (read_minibuf_noninteractive): Don't leak memory
	on memory overflow.
