@@ -1,5 +1,10 @@
 2011-07-29  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* xdisp.c: Integer and memory overflow fixes.
+	(store_mode_line_noprop_char, x_consider_frame_title):
+	Use ptrdiff_t, not int, for sizes.
+	(store_mode_line_noprop_char): Don't update size until alloc done.
+
 	* tparam.c: Integer and memory overflow fixes.
 	(tparam1): Use ptrdiff_t, not int, for sizes.
 	Don't update size until alloc done.
